fixed z-index

--- a/client/src/comps/mainpage/css/poster.module.css
+++ b/client/src/comps/mainpage/css/poster.module.css
@@ -22,6 +22,7 @@
   white-space: nowrap;
   overflow-x: hidden;
   overflow-y: hidden;
+  z-index: -1;
 }
 .coverItem {
   position: relative;
